--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,6 @@
 $font-size: 1rem;
-$font-family: "Merriweather-Black";
+$font-family: "Merriweather-Regular";
 $background-color: white;
-$font-color: black;
+$font-color: #343030;
+$font-weight: 400;
+$font-height: 150%;
