--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,5 +3,10 @@
   src: url("../fonts/Merriweather-Black.ttf");
 }
 
+@font-face {
+  font-family: "Merriweather-Regular";
+  src: url("../fonts/Merriweather-Regular.ttf");
+}
+
 @import "variables";
 @import "scaffolding";
