--- a/src/styles/_scaffolding.scss
+++ b/src/styles/_scaffolding.scss
@@ -65,3 +65,7 @@ button::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
+.slick-prev:before,
+.slick-next:before {
+  color: #382e2b !important;
+}
